# mag_tolstikov_irunner

./: .gitignore  CMakeLists.txt  generate.cpp  mul.cpp  print_matrix.cpp  transpose.cpp
